--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jasmine Testing</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+    <script src="libraries/jasmine-jquery.js"></script>
 <script src="libraries/popper.min.js"></script>
 <script src="libraries/p5.min.js"></script>
 <script src="libraries/p5.dom.min.js"></script>
